removed minor bugs

--- a/templates/base.html
+++ b/templates/base.html
@@ -35,7 +35,7 @@
         <!-- Single Footer Widget -->
         <div class="col-12 col-sm-6 col-lg-4">
           <div class="single-footer-widget">
-            <a href="./index.html" class="d-block mb-4"><img src="{% static 'img/logo.png' %}" alt=""></a>
+            <a href="/" class="d-block mb-4"><img src="{% static 'img/logo.png' %}" alt=""></a>
 
             <div class="footer-contact">
                  <p> We Believe Everyone Should Have Easy Access To Great Medical Care</p>
@@ -57,16 +57,7 @@
         <div class="col-12 col-sm-6 col-lg">
           <div class="single-footer-widget">
             <!-- Widget Title -->
-            <h5 class="widget-title">Newsletter</h5>
-
-            <p>We will send out weekly newest article and some great offers</p>
-            <!-- Newsletter Form -->
-            <div class="footer-newsletter-form">
-              <form action="#" method="post">
-                <input type="email" name="nl-email" value="" placeholder="Email Address">
-                <button type="submit"><i class="fa fa-paper-plane" aria-hidden="true"></i></button>
-              </form>
-            </div>
+         
 
             <!-- Social Info -->
             <div class="footer-social-info">
