--- a/templates/home.html
+++ b/templates/home.html
@@ -18,7 +18,7 @@
             <div class="col-12">
               <!-- Welcome Text -->
               <div class="welcome-text text-center">
-                <h2 data-animation="fadeInUp" data-delay="100ms">We Believe Everyone Should Have Easy Access To Great Health Care</h2>
+                <h2 data-animation="" data-delay="">We Believe Everyone Should Have Easy Access To Great Health Care</h2>
 
 
                 <div class="welcome-btn-group">
@@ -67,50 +67,7 @@
         </div>
       </div>
 
-      <!-- Single Welcome Slide -->
-      <div class="welcome-welcome-slide bg-img bg-gradient-overlay jarallax"  style="background-image: url('{% static 'img/bg-img/3.jpg' %}');">
-        <div class="container h-100">
-          <div class="row h-100 align-items-center">
-            <div class="col-12">
-              <!-- Welcome Text -->
-              <div class="welcome-text text-center">
-                <h2 data-animation="fadeInDown" data-delay="100ms">We Believe Everyone Should Have Easy Access To Great Health Care</h2>
-                <div class="welcome-btn-group">
-
-                    <form id="job-main-form" method="get" action="{% url 'appointment:search' %}" class="search-doctor-form">
-                    <div class="row mb-5">
-
-
-                        <div class="col-12 col-sm-6 col-md-6 col-lg-4 mb-4 mb-lg-0">
-                            <input type="text" id="location" name="location"
-                                   class="form-control form-control-lg" placeholder="Any Location ?  Ex : Uttara, Dhaka">
-                        </div>
-
-                        <div class="col-12 col-sm-6 col-md-6 col-lg-4 mb-4 mb-lg-0">
-
-
-                            <select id="department" name="department" class="form-control">
-                                <option style="display: none;" >Select Your Service</option>
-                                <option>Cardiology</option>
-                                <option>Dentistry</option>
-                                <option>ENT Specialists</option>
-                                <option>Astrology</option>
-                                <option>Neuroanatomy</option>
-                                <option>Blood Screening</option>
-                                <option>Eye Care</option>
-                                <option>Physical Therapy</option>
-                            </select>
-                        </div>
-
-
-                        <div class="col-12 col-sm-6 col-md-6 col-lg-4 mb-4 mb-lg-0">
-                            <button type="submit" class="btn btn-primary btn-lg btn-block text-black btn-search"><span
-                                    class="icon-search icon mr-2"></span>Search Doctor
-                            </button>
-                        </div>
-                    </div>
-                </form>
-
+     
 
 
 
